--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -2,13 +2,15 @@
 
 //左侧菜单宽度
 $base-menu-width: 260px;
+//左侧菜单折叠后宽度
+$base-menu-min-width: 62px;
 //左侧菜单背景颜色
 $base-menu-background: #001529;
 //顶部导航高度
 $base-tabber-height: 50px;
 
 //左侧菜单logo高度
-$base-menu-logo-height: 50px;
+$base-menu-logo-height: 64px;
 
 //左侧菜单logo文字大小
 $base-logo-title-fontSize: 18px
